yamls/deployment-ibm-mqadvanced-server-tls-build.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '2'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"ibm-mqadvanced-server-tls-build:latest","namespace":"da-mq"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ibm-mqadvanced-server-tls-build\")].image"}]
    openshift.io/generated-by: OpenShiftNewApp
  selfLink: /apis/apps/v1/namespaces/da-mq/deployments/ibm-mqadvanced-server-tls-build
  resourceVersion: '12512591'
  name: ibm-mqadvanced-server-tls-build
  uid: a23fa4b1-6905-4788-a56a-3f4039199e67
  creationTimestamp: '2021-01-19T23:34:13Z'
  generation: 2
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: apps/v1
      time: '2021-01-19T23:34:13Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:image.openshift.io/triggers': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector':
            'f:matchLabels':
              .: {}
              'f:deployment': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:openshift.io/generated-by': {}
              'f:labels':
                .: {}
                'f:deployment': {}
            'f:spec':
              'f:containers':
                'k:{"name":"ibm-mqadvanced-server-tls-build"}':
                  .: {}
                  'f:env':
                    .: {}
                    'k:{"name":"LICENSE"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"MQ_QMGR_NAME"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":1414,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":9157,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":9443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2021-01-19T23:34:13Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"ibm-mqadvanced-server-tls-build"}':
                  'f:image': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2021-01-19T23:34:23Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
  namespace: da-mq
  labels:
    app: ibm-mqadvanced-server-tls-build
    app.kubernetes.io/component: ibm-mqadvanced-server-tls-build
    app.kubernetes.io/instance: ibm-mqadvanced-server-tls-build
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: ibm-mqadvanced-server-tls-build
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: ibm-mqadvanced-server-tls-build
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: ibm-mqadvanced-server-tls-build
          image: >-
            image-registry.openshift-image-registry.svc:5000/da-mq/ibm-mqadvanced-server-tls-build@sha256:1b63060b191b7096a7006c85aa199422a64efc4e42aba474b078aa74d890a506
          ports:
            - containerPort: 1414
              protocol: TCP
            - containerPort: 9157
              protocol: TCP
            - containerPort: 9443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2021-01-19T23:34:23Z'
      lastTransitionTime: '2021-01-19T23:34:23Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2021-01-19T23:34:23Z'
      lastTransitionTime: '2021-01-19T23:34:13Z'
      reason: NewReplicaSetAvailable
      message: >-
        ReplicaSet "ibm-mqadvanced-server-tls-build-59dd7d5f58" has successfully
        progressed.
